# mechanicsdsl-ros2

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml
Docker/: Dockerfile
docs/: adding_systems.md  architecture.md  getting_started.md
mechanicsdsl_pendulum/: CMakeLists.txt  package.xml
mechanicsdsl_pendulum/config/: pendulum_params.yaml
mechanicsdsl_pendulum/include/mechanicsdsl_pendulum/: pendulum_dynamics.hpp
mechanicsdsl_pendulum/launch/: double_pendulum.launch.py  pendulum.launch.py
mechanicsdsl_pendulum/msg/: PendulumState.msg  SystemState.msg
mechanicsdsl_pendulum/src/: double_pendulum_node.cpp  pendulum_node.cpp
mechanicsdsl_pendulum/test/: test_pendulum_eom.cpp  test_pendulum_integration.py
scripts/: build.sh  monitor.sh
src/mechanicsdsl_ros2/: __init__.py  _packages.py
