[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mechanicsdsl-ros2"
version = "0.1.0"
description = "ROS2 integration and package scaffolding for MechanicsDSL — compile physical systems to complete ROS2 packages"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Noah Parsons", email = "nomapa223@gmail.com" }
]
keywords = [
  "ROS2", "robotics", "physics simulation", "MechanicsDSL",
  "domain-specific language", "compiler", "code generation"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Software Development :: Code Generators",
]
requires-python = ">=3.9"
dependencies = [
  "mechanicsdsl-core",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff"]

[project.scripts]
mechanicsdsl-ros2 = "mechanicsdsl_ros2.cli:main"

[project.urls]
Homepage = "https://github.com/MechanicsDSL/mechanicsdsl-ros2"
Repository = "https://github.com/MechanicsDSL/mechanicsdsl-ros2"
DOI = "https://doi.org/10.5281/zenodo.17771040"

[tool.hatch.build.targets.wheel]
packages = ["src/mechanicsdsl_ros2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
